// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`email templates > renders enterprise-lead (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>New enterprise lead: Acme Corp</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;"><strong>Ada Lovelace</strong> (ada@acme.com)</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Company: Acme Corp<br>Seats: 50</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Message:<br>We need multi-org for two subsidiaries.</p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Internal notification · enterprise lead from tunnex.io/enterprise.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "New enterprise lead: Acme Corp",
  "text": "New enterprise lead: Acme Corp

Name: Ada Lovelace
Email: ada@acme.com
Company: Acme Corp
Seats: 50

Message:
We need multi-org for two subsidiaries.",
}
`;

exports[`email templates > renders enterprise-lead-ack (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>We received your Tunnex Enterprise inquiry</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Hi Ada Lovelace,</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Thank you for reaching out about Tunnex Enterprise for <strong>Acme Corp</strong>. We received your request and our enterprise team is reviewing your details.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">We’ll get back to you shortly with tailored deployment guidance, pricing, and next steps for your architecture.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">In the meantime, feel free to explore our <a href="https://example.test/docs/" style="color:#EDEDEB;text-decoration:underline;">documentation</a> or reply directly to this email if you have any questions.</p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "We received your Tunnex Enterprise inquiry",
  "text": "Hi Ada Lovelace,

Thank you for reaching out about Tunnex Enterprise for Acme Corp. We received your request and our enterprise team is reviewing your details.

We’ll get back to you shortly with tailored deployment guidance, pricing, and next steps for your architecture.

Documentation: https://example.test/docs/",
}
`;

exports[`email templates > renders newsletter-confirm (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Confirm your Tunnex updates subscription</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">One click and you’re on the list · launch news and release notes, nothing else.</p><p style="margin:28px 0 16px;text-align:center;"><a href="https://example.test/subscribe/confirm?token=RAW_TOKEN_PLACEHOLDER" style="display:inline-block;background-color:#B03A45;color:#FFFFFF;text-decoration:none;font-weight:600;font-size:15px;padding:12px 24px;border-radius:8px;">Confirm subscription</a></p><p style="margin:16px 0 0;color:#A9A9A6;font-size:13px;line-height:1.5;">This link is valid for 24 hours and can be used once. If you didn’t subscribe, ignore this email and you won’t hear from us.</p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "Confirm your Tunnex updates subscription",
  "text": "One click and you’re on the list · launch news and release notes, nothing else.

Confirm here (valid 24 hours, single use):
https://example.test/subscribe/confirm?token=RAW_TOKEN_PLACEHOLDER

If you didn’t subscribe, ignore this email and you won’t hear from us.",
}
`;

exports[`email templates > renders trial-already-exists (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>A Tunnex trial already exists for acme.com</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Someone at <strong>acme.com</strong> already started a Tunnex Enterprise trial, and trials are one per company domain.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">If you can’t find who has it, or the trial ended and you want more time, we’ll sort it out:</p><p style="margin:28px 0 16px;text-align:center;"><a href="mailto:sales@tunnex.io?subject=Trial%20for%20acme.com" style="display:inline-block;background-color:#B03A45;color:#FFFFFF;text-decoration:none;font-weight:600;font-size:15px;padding:12px 24px;border-radius:8px;">Contact sales</a></p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "A Tunnex trial already exists for acme.com",
  "text": "Someone at acme.com already started a Tunnex Enterprise trial, and trials are one per company domain.

If you can’t find who has it, or the trial ended and you want more time, write to sales@tunnex.io and we’ll sort it out.",
}
`;

exports[`email templates > renders trial-approved (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Your Tunnex trial is approved</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Your 30-day Tunnex Enterprise trial for <strong>acme.com</strong> is approved.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Tunnex is launching soon: your license key will arrive in this inbox the moment the beta opens, and your 30 days start only when the key is issued — you lose nothing by being early.</p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "Your Tunnex trial is approved",
  "text": "Your 30-day Tunnex Enterprise trial for acme.com is approved.

Tunnex is launching soon: your license key will arrive in this inbox the moment the beta opens. Your 30 days start only when the key is issued — you lose nothing by being early.",
}
`;

exports[`email templates > renders trial-d10-reminder (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>4 days left in your Tunnex trial</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">The Tunnex Enterprise trial for <strong>acme.com</strong> ends on July 25, 2026.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">When it does, Enterprise features lapse to the Open tier and your VPN keeps running — nothing breaks. If SSO, policies, or multi-org earned their keep, let’s talk pricing before the deadline.</p><p style="margin:28px 0 16px;text-align:center;"><a href="mailto:sales@tunnex.io?subject=Tunnex%20Enterprise" style="display:inline-block;background-color:#B03A45;color:#FFFFFF;text-decoration:none;font-weight:600;font-size:15px;padding:12px 24px;border-radius:8px;">Talk to sales</a></p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "4 days left in your Tunnex trial",
  "text": "The Tunnex Enterprise trial for acme.com ends on July 25, 2026.

When it does, Enterprise features lapse to the Open tier and your VPN keeps running — nothing breaks.
If SSO, policies, or multi-org earned their keep, write to sales@tunnex.io before the deadline.",
}
`;

exports[`email templates > renders trial-d21-followup (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>How did your Tunnex trial go?</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">A week ago the Tunnex Enterprise trial for <strong>acme.com</strong> ended. One honest question: what stopped you?</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Price, a missing feature, a rough edge — reply and tell us. We read every answer, and it directly shapes what we build next.</p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "How did your Tunnex trial go?",
  "text": "A week ago the Tunnex Enterprise trial for acme.com ended. One honest question: what stopped you?

Price, a missing feature, a rough edge — reply and tell us. We read every answer, and it directly shapes what we build next.",
}
`;

exports[`email templates > renders trial-expired-upgrade (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Your Tunnex trial has ended</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">The Enterprise trial for <strong>acme.com</strong> has ended. Your deployment lapsed to the Open tier and keeps working — your network never depended on us.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Want SSO, Zero Trust policies, and multi-org back? Upgrading is pasting a new key.</p><p style="margin:28px 0 16px;text-align:center;"><a href="https://example.test/pricing/" style="display:inline-block;background-color:#B03A45;color:#FFFFFF;text-decoration:none;font-weight:600;font-size:15px;padding:12px 24px;border-radius:8px;">See Enterprise pricing</a></p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "Your Tunnex trial has ended",
  "text": "The Tunnex Enterprise trial for acme.com has ended. Your deployment lapsed to the Open tier and keeps working — your network never depended on us.

Want SSO, Zero Trust policies, and multi-org back? Upgrading is pasting a new key.
Pricing: https://example.test/pricing/",
}
`;

exports[`email templates > renders trial-key-delivery (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Your Tunnex Enterprise trial key</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">
<span style="display:none;font-size:1px;color:#0A0A0A;max-height:0;max-width:0;opacity:0;overflow:hidden;">Your 30-day Enterprise trial key is inside — keep it; licence enforcement is not live in Tunnex yet.</span>
<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Here is the 30-day Tunnex Enterprise trial key for <strong>acme.com</strong>, valid until July 25, 2026:</p><pre style="background-color:#0A0A0A;border:1px solid #2E2E2E;border-radius:6px;padding:12px;font-size:13px;overflow-x:auto;">TNX-TRIAL-KEY-PLACEHOLDER</pre><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Licence enforcement is not live in Tunnex yet, so there is nothing to paste this into today and nothing changes when you receive it. The key is yours — keep it.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">In the meantime, Tunnex runs fully without a key:</p><p style="margin:28px 0 16px;text-align:center;"><a href="https://example.test/docs/quickstart/" style="display:inline-block;background-color:#B03A45;color:#FFFFFF;text-decoration:none;font-weight:600;font-size:15px;padding:12px 24px;border-radius:8px;">Follow the quickstart</a></p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "Your Tunnex Enterprise trial key",
  "text": "Here is the 30-day Tunnex Enterprise trial key for acme.com, valid until July 25, 2026:

TNX-TRIAL-KEY-PLACEHOLDER

Licence enforcement is not live in Tunnex yet, so there is nothing to paste this into today and
nothing changes when you receive it. The key is yours — keep it.

In the meantime, Tunnex runs fully without a key.
Quickstart: https://example.test/docs/quickstart/",
}
`;

exports[`email templates > renders trial-verify (html + text snapshot) 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Confirm your Tunnex trial request</title>
</head>
<body style="margin:0;padding:0;background-color:#0A0A0A;color:#EDEDEB;">

<div style="max-width:560px;margin:0 auto;padding:40px 20px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
  <div style="background-color:#141414;border:1px solid #2E2E2E;border-radius:12px;padding:32px 28px;color:#EDEDEB;font-size:15px;line-height:1.6;">
    <div style="padding-bottom:24px;margin-bottom:24px;border-bottom:1px solid #2E2E2E;text-align:center;">
      <a href="https://example.test" style="text-decoration:none;display:inline-block;">
        <img src="https://example.test/email/tunnex-logo-2x.png" alt="Tunnex" width="176" height="22" style="display:block;border:0;margin:0 auto;outline:none;">
      </a>
    </div>
<p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">You requested a 30-day Tunnex Enterprise trial for <strong>acme.com</strong>.</p><p style="margin:0 0 16px;color:#EDEDEB;font-size:15px;line-height:1.6;">Confirm it from the device where you want to finish setup:</p><p style="margin:28px 0 16px;text-align:center;"><a href="https://example.test/trial/verify?token=RAW_TOKEN_PLACEHOLDER" style="display:inline-block;background-color:#B03A45;color:#FFFFFF;text-decoration:none;font-weight:600;font-size:15px;padding:12px 24px;border-radius:8px;">Confirm trial request</a></p><p style="margin:16px 0 0;color:#A9A9A6;font-size:13px;line-height:1.5;">This link is valid for 30 minutes and can be used once. If you didn’t request a trial, ignore this email — nothing happens without confirmation.</p>
  </div>
  <p style="color:#A9A9A6;font-size:12px;line-height:1.6;padding-top:20px;margin:0;text-align:center;">
    Tunnex · Connect everything. Trust nothing.<br>
    Questions? Reply to this email or write to <a href="mailto:support@tunnex.io" style="color:#A9A9A6;text-decoration:underline;">support@tunnex.io</a>.
  </p>
</div>
<!-- tnx:test-nonce -->
</body>
</html>",
  "subject": "Confirm your Tunnex trial request",
  "text": "You requested a 30-day Tunnex Enterprise trial for acme.com.

Confirm it here (valid 30 minutes, single use):
https://example.test/trial/verify?token=RAW_TOKEN_PLACEHOLDER

If you didn’t request a trial, ignore this email — nothing happens without confirmation.",
}
`;
